@@ -54,6 +54,7 @@ TODO inlining : substitute class+function type parameters in order to have fully
 	haxe.Stack support for flash9
 	fixed current package bug in inherited constructor type
 	delayed type-parameter constraints check (allow mutual rec extends for SPOD)
+	improved unclosed macro error reporting
 
 2008-04-05: 1.19
 	fixed flash9 Array.toString
